# Polynomial

./: CMakeLists.txt  InputParser.cpp  InputParser.hpp  Interaction.cpp  Interaction.hpp  Polynomial.cpp  Polynomial.hpp  PolynomialInput.txt  README.md  main.cpp
inputparser/: CMakeLists.txt  InputParser.cpp  InputParser.hpp
interaction/: CMakeLists.txt  Interaction.cpp  Interaction.hpp
polynomial/: CMakeLists.txt  Polynomial.cpp  Polynomial.hpp
